correção erro ao criar novo perfil

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 [ ] adicionar mais opções de filtragem
 [ ] adicionar limite total e dia de vencimento do cartão (ajustável mensalmente)
 [ ] adicionar mês/ano da fatura (caso em cartão) nos registros
+[ ] ajustar tema escuro
